# TauriYi

./: README.md  Translate_Chart.md  test.http
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  app_setup.rs  commands.rs  config.rs  database.rs  lang.rs  lib.rs  main.rs  tray_menu.rs  utils.rs
src/js/: history.js  language-swap.js  main.js  settings.js  tauri-api.js  translation.js  ui-utils.js
